minor: tiny refactoring